
 o Add APIs to have libssh2 automatically send keep-alive requests.
   The APIs are libssh2_keepalive_config, and libssh2_keepalive_send.
   By Simon Josefsson.

* (February 15 2010) Daniel Stenberg:
- Added 46 new man pages for public convenience macros. The man pages  are
  just short redirects to the actual underlying function. The were all
  initially created by a script.

- Committed the patch by Yoichi Iwaki in bug #2929647, which fixed a memory
  leak when an 'outbuf' was still allocated when a session was freed.

Version 1.2.4 (February 13, 2010)

 o Resolve compile issues on Solaris x64 and UltraSPARC
 o Allow compiling with OpenSSL when AES isn't available
 o Fix Tru64 socklen_t compile issue with example/direct_tcpip.c

Version 1.2.3 (February 3, 2010)

 o Added libssh2_trace_sethandler()
 o Added the direct_tcpip.c example
 o Fixed memory leak in userauth_publickey
 o Added support for authentication via SSH-Agent.  By Daiki Ueno.

 o Respond to unknown SSH_MSG_GLOBAL_REQUEST/SSH_MSG_CHANNEL_REQUEST
   with SSH_MSG_REQUEST_FAILURE/SSH_MSG_CHANNEL_FAILURE in order to
   make (at least) OpenSSH server keepalive work.  Before OpenSSH
   servers (configured with a positive ClientAliveInterval) would
   terminate connections against libssh2 clients because libssh2 did
   not respond properly to the request.  By Simon Josefsson.

Version 1.2.2 (November 16, 2009)

* This release includes the following changes:

  o Fix crash when server sends an invalid SSH_MSG_IGNORE message.
    Reported by Bob Alexander <balexander@expressor-software.com> in
    <http://thread.gmane.org/gmane.network.ssh.libssh2.devel/2530>.
    By Simon Josefsson.

  o Support for the "aes128-ctr", "aes192-ctr", "aes256-ctr" ciphers
    as per RFC 4344 for libgcrypt and OpenSSL.  They are now the
    preferred ciphers.  By Simon Josefsson.

  o Support for the "arcfour128" cipher as per RFC 4345 for libgcrypt
    and OpenSSL.  It is preferred over the normal "arcfour" cipher