@@ -3,6 +3,9 @@
    The APIs are libssh2_keepalive_config, and libssh2_keepalive_send.
    By Simon Josefsson.
 
+ o Add global init/exit points, to do crypto initialization in one place.
+   The APIs are libssh2_init and libssh2_exit.  By Lars Nordin.
+
 * (February 15 2010) Daniel Stenberg:
 - Added 46 new man pages for public convenience macros. The man pages  are
   just short redirects to the actual underlying function. The were all
